--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -13,11 +13,12 @@
 {% block botones %}
 <div class="row">
 	<form class="navbar-form navbar-left">
-		<button type="submit" class="btn btn-default">Crear Usuario</button>
+		
+		<a href="nuevo/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
 		<div class="form-group">
 			<input type="text" class="form-control">
 		</div>
-		<button type="submit" class="btn btn-default">Buscar</button>
+		<button type="button" class="btn btn-default">Buscar</button>
 	</form>
 </div>
 {% endblock %}
