--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -19,7 +19,7 @@
 		<div class="container-fluid"><!-- Comienzo del banner -->
 			<div class="row">
 			  <div class="col-md-8"><h3>{{user.username|capfirst}}</h3></div>
-			  <div class="col-md-4"><!--<button type="button" class="btn btn-primary btn-sm">Cerrar Sesion</button> --><a href="/cerrar/">Salir</a></div>
+			  <div class="col-md-4"><a href="/cerrar/"><button type="button" class="btn btn-primary btn-sm">Cerrar Sesion</button></a></div>
 			  
 			</div>
 			<div class="row">
