--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -28,7 +28,7 @@
 				<div class="row">
 				  <div class="col-md-6">
 					<p>
-					  <div class="btn-group">
+				<!-- 	  <div class="btn-group">-->
 					  <a href="/"><button type="button" class="btn btn-default">Inicio</button></a><!-- Boton de Inicio -->
 					  <div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><!-- Boton de Configuracion -->
@@ -38,7 +38,7 @@
 						  <li><a href="/adm_usuarios">Administrar Usuarios</a></li>
 						  <li><a href="#">Administrar Roles</a></li>
 						</ul>
-					  </div>
+					<!--   </div>-->
 					  </div>
 					</p>
 				  </div>
