--- a/sap/templates/Usuarios/usuarionuevo.html
+++ b/sap/templates/Usuarios/usuarionuevo.html
@@ -13,7 +13,7 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-	<form action="/adm_usuarios/nuevo/" method="post">
+	<form action="/adm_usuarios/nuevo/" method="POST">
 		<div>Nombre de usuario:<br> <input type="text" name="username" /></div>
 		<div>Contrasenha:<br> <input type="password" name="contrasenha" /></div>
 		<div>Vuelva a introducir la contrasenha:<br> <input type="password" name="contrasenha" /></div>
@@ -25,13 +25,17 @@
 		<div>Especialidad: <br><input type="text" name="especialidad" /></div>
 		<div>Observaciones: <br><input type="text" name="observaciones" /></div>
 		<tr><br>
-			<td><div align="center">
-				<input type="submit" value="Crear Usuario">
-			</div></td><br>
-			<td><div align="center">
-				<input type="Reset" value="Vaciar Campos">
-			</div></td>
-		</tr><br><br><br><br>
+		
+		<td><div align="center">
+		<a href="enviar/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
+		</div>
+		</td><br>
+		<td><div align="center">
+		<button type="Reset" class="btn btn-default">Vaciar Campos</button>
+		</div>
+		</td><br>
+		
+		<br>
 	</form>
 
 </div>
