incorporacion nuevas funcionalidades(botones y estilo) en usuarios.html

--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -26,14 +26,66 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-	<div class="list-group">
+	<div class="panel-group" id="accordion">
+	<div class="panel panel-default">
 		{% if lista_usuarios %}
 			{% for usuario in lista_usuarios %}
-				<a href="#" class="list-group-item">{{ usuario.id }} : {{ usuario.user.first_name }} {{ usuario.user.last_name }}</a>
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ usuario.id }}">
+				          {{ usuario.id }} : {{ usuario.user.first_name }} {{ usuario.user.last_name }}
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapse{{ usuario.id }}" class="panel-collapse collapse">
+				      <div class="panel-body">
+				      		<a href="consultar/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
+							  Eliminar
+							</button>
+				      </div>
+				    </div>
+				  </div>
 			{% endfor %}
 		{% else %}
-			<h6>La lista de Usuarios esta vacia.</h6>>
+			
+			<div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse">
+				          <!-- <h6 class="list-group-item"> -->La lista de Usuarios esta vacia.<!-- </h6> -->
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapse" class="panel-collapse collapse collapse">
+				      <div class="panel-body">
+				      		<a href="consultar/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
+							  Eliminar
+							</button>
+				      </div>
+				    </div>
+				  </div>
 		{% endif %}
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		        <h4 class="modal-title" id="myModalLabel">Eliminar</h4>
+		      </div>
+		      <div class="modal-body">
+		        	Esta usted seguro de que desea eliminar al usuario?
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">cancelar</button>
+		        <a href="eliminar/"><button type="button" class="btn btn-primary">Ok</button></a>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	</div>
 	</div>
 </div>
 {% endblock %}
