nuevo template usuariocreado.html, confirmacion de creacion de usuario

--- a/sap/templates/Usuarios/usuarionuevo.html
+++ b/sap/templates/Usuarios/usuarionuevo.html
@@ -16,7 +16,7 @@
 	<form action="/adm_usuarios/nuevo/" method="POST">
 		<div>Nombre de usuario:<br> <input type="text" name="username" /></div>
 		<div>Contrasenha:<br> <input type="password" name="contrasenha" /></div>
-		<div>Vuelva a introducir la contrasenha:<br> <input type="password" name="contrasenha" /></div>
+		<div>Vuelva a introducir la contrasenha:<br> <input type="password" name="contrasenha2" /></div>
 		<div>Nombre: <br><input type="text" name="nombre" /></div>
 		<div>Apellido:<br> <input type="text" name="apellido" /></div>
 		<div>Email: <br><input type="text" name="email" /></div>
