modificacion modelo User, creacion de usuario

--- a/sap/templates/Usuarios/usuarionuevo.html
+++ b/sap/templates/Usuarios/usuarionuevo.html
@@ -13,29 +13,19 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-	<form action="/adm_usuarios/nuevo/" method="POST">
-		<div>Nombre de usuario:<br> <input type="text" name="username" /></div>
-		<div>Contrasenha:<br> <input type="password" name="contrasenha" /></div>
-		<div>Vuelva a introducir la contrasenha:<br> <input type="password" name="contrasenha2" /></div>
-		<div>Nombre: <br><input type="text" name="nombre" /></div>
-		<div>Apellido:<br> <input type="text" name="apellido" /></div>
-		<div>Email: <br><input type="text" name="email" /></div>
-		<div>Telefono: <br><input type="text" name="telefono" /></div>
-		<div>Direccion: <br><input type="text" name="direccion" /></div>
-		<div>Especialidad: <br><input type="text" name="especialidad" /></div>
-		<div>Observaciones: <br><input type="text" name="observaciones" /></div>
-		<tr><br>
-		
-		<td><div align="center">
-		<a href="enviar/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
-		</div>
-		</td><br>
-		<td><div align="center">
-		<button type="Reset" class="btn btn-default">Vaciar Campos</button>
-		</div>
-		</td><br>
-		
-		<br>
+	{% if form.errors %}
+		Por favor verifique: error{{ form.pluralize }}.
+	{% endif %}
+	
+	<form action="" method="post">
+		<table>
+			{{ form.as_table }}
+		</table>
+		{% csrf_token %}
+	<div align="center">
+		<input class="btn btn-default" type="submit" value="Crear"/>
+	</div>
+	<br>
 	</form>
 
 </div>
