--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -33,7 +33,7 @@
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ usuario.id }}">
-				          {{ usuario.id }} : {{ usuario.user.first_name }} {{ usuario.user.last_name }}
+				          {{ usuario.id }} : {{ usuario.username }}
 				        </a>
 				      </h4>
 				    </div>
@@ -46,11 +46,10 @@
 							</button>
 				      </div>
 				    </div>
-				  </div>
+	</div>
 			{% endfor %}
 		{% else %}
-			
-			<div class="panel-heading">
+					<div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse">
 				          <!-- <h6 class="list-group-item"> -->La lista de Usuarios esta vacia.<!-- </h6> -->
@@ -66,8 +65,9 @@
 							</button>
 				      </div>
 				    </div>
-				  </div>
 		{% endif %}
+	</div>
+
 		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		  <div class="modal-dialog">
 		    <div class="modal-content">
@@ -85,7 +85,6 @@
 		    </div>
 		  </div>
 		</div>
-	</div>
-	</div>
+
 </div>
 {% endblock %}
