--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -27,9 +27,10 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 	<div class="panel-group" id="accordion">
-	<div class="panel panel-default">
+	
 		{% if lista_usuarios %}
 			{% for usuario in lista_usuarios %}
+	<div class="panel panel-default">
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ usuario.id }}">
@@ -49,6 +50,7 @@
 	</div>
 			{% endfor %}
 		{% else %}
+	<div class="panel panel-default">
 					<div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse">
@@ -65,6 +67,7 @@
 							</button>
 				      </div>
 				    </div>
+	</div>
 		{% endif %}
 	</div>
 
