--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -11,6 +11,8 @@
 		<!-- Bootstrap JS -->
 		<script type="text/javascript" src="{{STATIC_URL}}aplicaciones/js/jquery.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}aplicaciones/js/bootstrap.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}aplicaciones/js/main.js"></script>
+		
 	</head>
 	<body>
 		{% if not user.is_authenticated %}
