--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -40,8 +40,8 @@
 				    </div>
 				    <div id="collapse{{ usuario.id }}" class="panel-collapse collapse">
 				      <div class="panel-body">
-				      		<a href="consultar/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="modificar/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<a href="consultar/{{ usuario.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/{{ usuario.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
 				      		<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
 							  Eliminar
 							</button>
@@ -60,8 +60,8 @@
 				    </div>
 				    <div id="collapse" class="panel-collapse collapse collapse">
 				      <div class="panel-body">
-				      		<a href="consultar/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="modificar/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<a href="consultar/{{ usuario.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/{{ usuario.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
 				      		<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
 							  Eliminar
 							</button>
