algunos cambios en views de usuario... en usuarios,html y en consultar_usuario.html

--- a/sap/templates/Usuarios/consultar_usuario.html
+++ b/sap/templates/Usuarios/consultar_usuario.html
@@ -4,23 +4,21 @@
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="#">Usuarios</a>
+			<a href="#">{{ usuario.username }}</a>
 	</ul>
 </div>
 {% endblock %}
 
-
 {% block contenido %}
 <div class="content-secondary">
-	<p><h3>id<span class="label label-default">{{ usuario.id }}</span></h3></p>
-	<p><h3>username<span class="label label-default">{{ usuario.username }}</span></h3></p>
-	<p><h3>nombre<span class="label label-default">{{ usuario.first_name }}</span></h3></p>
-	<p><h3>apellido<span class="label label-default">{{ usuario.last_name }}</span></h3></p>
-	<p><h3>password<span class="label label-default">{{ usuario.password }}</span></h3></p>
-	<p><h3>telefono<span class="label label-default">{{ usuario.telefono }}</span></h3></p>
-	<p><h3>direccion<span class="label label-default">{{ usuario.direccion }}</span></h3></p>
-	<p><h3>especialidad<span class="label label-default">{{ usuario.especialidad }}</span></h3></p>
-	<p><h3>observaciones<span class="label label-default">{{ usuario.obervaciones }}</span></h3></p>
+	<p><h4>id<span class="label label-default">{{ usuario.id }}</span></h4></p>
+	<p><h4>username<span class="label label-default">{{ usuario.username }}</span></h4></p>
+	<p><h4>nombre<span class="label label-default">{{ usuario.first_name }}</span></h4></p>
+	<p><h4>apellido<span class="label label-default">{{ usuario.last_name }}</span></h4></p>
+	<p><h4>telefono<span class="label label-default">{{ usuario.telefono }}</span></h4></p>
+	<p><h4>direccion<span class="label label-default">{{ usuario.direccion }}</span></h4></p>
+	<p><h4>especialidad<span class="label label-default">{{ usuario.especialidad }}</span></h4></p>
+	<p><h4>observaciones<span class="label label-default">{{ usuario.obervaciones }}</span></h4></p>
 	
 </div>
 {% endblock %}
