--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -14,7 +14,7 @@
 <div class="row">
 	<form class="navbar-form navbar-left">
 		
-		<a href="nuevo/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
+		<a href="nuevo/enviar/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
 		<div class="form-group">
 			<input type="text" class="form-control">
 		</div>
@@ -34,23 +34,16 @@
 				    <div class="panel-heading">
 				      <h4 class="panel-title">
 				        <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{ usuario.id }}">
-				          {{ usuario.id }} : {{ usuario.username }}
+				          	{{ usuario.username }}
 				        </a>
 				      </h4>
 				    </div>
 				    <div id="collapse{{ usuario.id }}" class="panel-collapse collapse">
 				      <div class="panel-body">
-<<<<<<< HEAD
 				      		<a href="consultar/{{ usuario.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
 				      		<a href="modificar/{{ usuario.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#myModal">
-							  Eliminar
-							</button>
-=======
-				      		<a href="consultar/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="modificar/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
 				      		<button class="open-Modal btn btn-danger btn-sm" data-toggle="modal" data-target="#myModal" data-id="{{ usuario.id }}">Eliminar</button>
->>>>>>> e8fe5ea8cc8df21c34015c89fdd7a8908f8c1420
+
 				      </div>
 				    </div>
 	</div>
