creacion de usuario con perfil funcionando, almanamiento de los datos de usuario

--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -14,7 +14,7 @@
 <div class="row">
 	<form class="navbar-form navbar-left">
 		
-		<a href="nuevo/enviar/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
+		<a href="nuevo/"><button type="button" class="btn btn-default">Crear Usuario</button></a>
 		<div class="form-group">
 			<input type="text" class="form-control">
 		</div>
