--- a/sap/templates/Usuarios/usuariocreado.html
+++ b/sap/templates/Usuarios/usuariocreado.html
@@ -13,7 +13,7 @@
 {% block contenido %}
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
-	<h2>Usuario Creado con Exito</h2>
+	<h2>Usuario Creado con Exito {{ mensaje }}</h2>
 	<a href="/adm_usuarios/"><button type="button" class="btn btn-default">OK</button></a>
 		<div class="form-group">
 		</div>
