--- a/sap/static/aplicaciones/css/main.css
+++ b/sap/static/aplicaciones/css/main.css
@@ -158,6 +158,13 @@ body
     text-align: center;
 }
 
+#footer {
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:50px;            /* Altura del footer */
+}
+
 .footer span
 {
     display:block;
@@ -178,6 +185,22 @@ body
 	text-align: center;
 }
 
+#pie {
+	padding: 10px;
+	background-color: #333;
+	font-size: 16px;
+	color: #FFF;
+	font-family: Arial, Helvetica, sans-serif;
+	overflow: hidden;
+}
+
+.flotar-der {
+	float: right;
+}
+
+.flotar-izq {
+	float: left;
+}
 
 /* ==========================================================================
    Media Queries
