--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
+	<!-- Inicio de la cabecera -->
 	<head>
 		<title>Sistema de Administracion de Proyectos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
         <!-- Bootstrap -->
         <link href="{{STATIC_URL}}aplicaciones/css/bootstrap.css" rel="stylesheet" media="screen">
+        <link href="{{STATIC_URL}}aplicaciones/css/main.css" rel="stylesheet" media="screen">
         <!-- Nuestro estilo -->
         <link href="{{STATIC_URL}}aplicaciones/css/main.css" rel="stylesheet" media="screen">
 		<!-- Bootstrap JS -->
 		<script type="text/javascript" src="{{STATIC_URL}}aplicaciones/js/jquery.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}aplicaciones/js/bootstrap.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}aplicaciones/js/main.js"></script>
-		
 	</head>
+	<!-- Fin de la cabecera -->
+	
 	<body>
-		{% if not user.is_authenticated %}
-				<meta http-equiv="refresh" content="0;URL=/">
-		{% endif %}
-		<div class="container-fluid"><!-- Comienzo del banner -->
+		<!-- Comienzo del banner -->
+		<div class="container-fluid">
 			<div class="row">
 			  <div class="col-md-8"><h3>{{user.username|capfirst}}</h3></div>
 			  <div class="col-md-4"><a href="/cerrar/"><button type="button" class="btn btn-primary btn-sm">Cerrar Sesion</button></a></div>
-			  
 			</div>
 			<div class="row">
 			  <div class="col-md-9 col-md-offset-1">
 				<h1>Sistema de Administracion de Proyectos</h1>
 				<div class="row">
 				  <div class="col-md-6">
-					<p>
-				<!-- 	  <div class="btn-group">-->
+					<br>
 					  <a href="/"><button type="button" class="btn btn-default">Inicio</button></a><!-- Boton de Inicio -->
 					  <div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><!-- Boton de Configuracion -->
@@ -40,23 +40,32 @@
 						  <li><a href="/adm_usuarios">Administrar Usuarios</a></li>
 						  <li><a href="#">Administrar Roles</a></li>
 						</ul>
-					<!--   </div>-->
 					  </div>
-					</p>
 				  </div>
 				</div>
 			  </div>
 			</div>
-		</div><!-- Fin del banner -->
+		</div>
+		
+		<!-- Fin del banner -->
 		<div class="wrapper">
 		{% block menu %}{% endblock %}
 		{% block botones %}{% endblock %}
 		{% block contenido  %}{% endblock %}
 		</div>
+		
+		<!-- Comienzo del pie de pagina -->
 		<footer class='centrar'>
-	    	<span>Grupo R11</span>
-			<span>Facultad Politecnica - Universidad Nacional de Asunción</span>
+			<div id="footer">
+	    		<div id="pie">
+    				<p class="flotar-izq">Grupo R11</p>
+    				<p class="flotar-der">&nbsp;</p>
+    				<p class="flotar-der">&nbsp;</p>
+    				<p class="flotar-der">Facultad Politecnica - Universidad Nacional de Asunción</p>
+  				</div>
+  			</div>
 		</footer>
+		<!-- Fin del pie de pagina -->
 	</body>
 </html>
 
