--- a/sap/templates/Usuarios/modificar_usuario.html
+++ b/sap/templates/Usuarios/modificar_usuario.html
@@ -1,1 +1,32 @@
 {% extends "base_general.html" %}
+
+{% block menu %}		
+<div class="menu">
+	<ul>
+		<li id="option1" class="active">
+			<a href="#">Modificar Usuario</a>
+		</li>
+	</ul>
+</div>
+{% endblock %}
+
+{% block contenido %}
+<div class="content-secondary">
+<!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
+	{% if form.errors %}
+		Por favor verifique: error{{ form.pluralize }}.
+	{% endif %}
+	
+	<form action="" method="post">
+		<table>
+			{{ form.as_table }}
+		</table>
+		{% csrf_token %}
+	<div align="center">
+		<input class="btn btn-default" type="submit" value="Crear"/>
+	</div>
+	<br>
+	</form>
+
+</div>
+{% endblock %}
