--- a/sap/templates/Usuarios/consultar_usuario.html
+++ b/sap/templates/Usuarios/consultar_usuario.html
@@ -16,10 +16,10 @@
 	<p><h4>nombre<span class="label label-default">{{ usuario.first_name }}</span></h4></p>
 	<p><h4>apellido<span class="label label-default">{{ usuario.last_name }}</span></h4></p>
 	<p><h4>email<span class="label label-default">{{ usuario.email }}</span></h4></p>
-	<p><h4>telefono<span class="label label-default">{{ usuario.telefono }}</span></h4></p>
-	<p><h4>direccion<span class="label label-default">{{ usuario.direccion }}</span></h4></p>
-	<p><h4>especialidad<span class="label label-default">{{ usuario.especialidad }}</span></h4></p>
-	<p><h4>observaciones<span class="label label-default">{{ usuario.obervaciones }}</span></h4></p>
+	<p><h4>telefono<span class="label label-default">{{ perfil.telefono }}</span></h4></p>
+	<p><h4>direccion<span class="label label-default">{{ perfil.direccion }}</span></h4></p>
+	<p><h4>especialidad<span class="label label-default">{{ perfil.especialidad }}</span></h4></p>
+	<p><h4>observaciones<span class="label label-default">{{ perfil.observaciones }}</span></h4></p>
 </div>
 <br>
 <div align="center">
