--- a/sap/templates/Usuarios/modificar_usuario.html
+++ b/sap/templates/Usuarios/modificar_usuario.html
@@ -14,16 +14,16 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 	{% if form.errors %}
-		Por favor verifique: error{{ form.pluralize }}.
+		Por favor verifique: error{{ mensaje }}.
 	{% endif %}
 	
 	<form action="" method="post">
 		<table>
-			
+			{{ form.as_table }}
 		</table>
 		{% csrf_token %}
 	<div align="center">
-		<input class="btn btn-default" type="submit" value="Crear"/>
+		<input class="btn btn-default" type="submit" value="Guardar"/>
 	</div>
 	<br>
 	</form>
