cambios a UsuarioModificadoForm, vista ModificarUsuario y modificar_usuario.html

--- a/sap/templates/Usuarios/modificar_usuario.html
+++ b/sap/templates/Usuarios/modificar_usuario.html
@@ -14,7 +14,7 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 	{% if form.errors %}
-		Por favor verifique: error{{ mensaje }}.
+		Por favor verifique: 
 	{% endif %}
 	
 	<form action="" method="post">
