--- a/sap/templates/Usuarios/consultar_usuario.html
+++ b/sap/templates/Usuarios/consultar_usuario.html
@@ -11,15 +11,15 @@
 
 {% block contenido %}
 <div class="content-secondary">
-	<p><h4>id<span class="label label-default">{{ usuario.id }}</span></h4></p>
-	<p><h4>username<span class="label label-default">{{ usuario.username }}</span></h4></p>
-	<p><h4>nombre<span class="label label-default">{{ usuario.first_name }}</span></h4></p>
-	<p><h4>apellido<span class="label label-default">{{ usuario.last_name }}</span></h4></p>
-	<p><h4>email<span class="label label-default">{{ usuario.email }}</span></h4></p>
-	<p><h4>telefono<span class="label label-default">{{ perfil.telefono }}</span></h4></p>
-	<p><h4>direccion<span class="label label-default">{{ perfil.direccion }}</span></h4></p>
-	<p><h4>especialidad<span class="label label-default">{{ perfil.especialidad }}</span></h4></p>
-	<p><h4>observaciones<span class="label label-default">{{ perfil.observaciones }}</span></h4></p>
+	<p><h4>Id: <span class="label label-default">{{ usuario.id }}</span></h4></p>
+	<p><h4>Nombre_de_Usuario: <span class="label label-default">{{ usuario.username }}</span></h4></p>
+	<p><h4>Nombre: <span class="label label-default">{{ usuario.first_name }}</span></h4></p>
+	<p><h4>Apellido: <span class="label label-default">{{ usuario.last_name }}</span></h4></p>
+	<p><h4>Email: <span class="label label-default">{{ usuario.email }}</span></h4></p>
+	<p><h4>Telefono: <span class="label label-default">{{ perfil.telefono }}</span></h4></p>
+	<p><h4>Direccion: <span class="label label-default">{{ perfil.direccion }}</span></h4></p>
+	<p><h4>Especialidad: <span class="label label-default">{{ perfil.especialidad }}</span></h4></p>
+	<p><h4>Observaciones: <span class="label label-default">{{ perfil.observaciones }}</span></h4></p>
 </div>
 <br>
 <div align="center">
