--- a/sap/templates/Usuarios/usuarionuevo.html
+++ b/sap/templates/Usuarios/usuarionuevo.html
@@ -14,7 +14,7 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 	{% if form.errors %}
-		Por favor verifique:
+		Por favor verifique:error {{ mensaje }}
 	{% endif %}
 	
 	<form action="" method="post">
