documentacion de las vistas de modificar y consultar usuario... modificacion en usuarionuevo.html y modifcar_usuario.html

--- a/sap/templates/Usuarios/modificar_usuario.html
+++ b/sap/templates/Usuarios/modificar_usuario.html
@@ -24,6 +24,7 @@
 		{% csrf_token %}
 	<div align="center">
 		<input class="btn btn-default" type="submit" value="Guardar"/>
+		<a href="/adm_usuarios/"><button type="button" class="btn btn-default">Cancelar</button></a>
 	</div>
 	<br>
 	</form>
