--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -56,6 +56,11 @@
 		
 		<!-- Comienzo del pie de pagina -->
 		<footer class='centrar'>
+		<br><span>Grupo R11</span><br>
+			<span>Facultad Politecnica - Universidad Nacional de Asuncion</span><br>
+			<span>2014</span>
+		</footer>
+<!-- 		<footer class='centrar'>
 			<div id="footer">
 	    		<div id="pie">
     				<p class="flotar-izq">Grupo R11</p>
@@ -64,7 +69,7 @@
     				<p class="flotar-der">Facultad Politecnica - Universidad Nacional de Asunción</p>
   				</div>
   			</div>
-		</footer>
+		</footer> -->
 		<!-- Fin del pie de pagina -->
 	</body>
 </html>
