--- a/sap/templates/Usuarios/usuarios.html
+++ b/sap/templates/Usuarios/usuarios.html
@@ -20,8 +20,8 @@
 			<p style="color:red;">No se encontraron coincidencias.</p>
 			{% endif %}
 			<form action="" method="get">
-				<input type="text" name="busqueda">
-				<input type="submit" value="Search">
+				<input type="text" name="busqueda" class="btn btn-default">
+				<input class="btn btn-default" type="submit" value="Buscar">
 			</form>
 			
 		</div>
