--- a/sap/templates/inicio.html
+++ b/sap/templates/inicio.html
@@ -19,7 +19,7 @@
 {% block botones %}
 <div class="row">
 	<form class="navbar-form navbar-left">
-		<button type="submit" class="btn btn-default">Crear Proyecto</button>
+		<a href="/adm_proyectos/crear/"><button type="button" class="btn btn-default">Crear Proyecto</button></a>
 		<button type="submit" class="btn btn-default">Importar Proyecto</button>
 		<div class="form-group">
 			<input type="text" class="form-control">
@@ -36,7 +36,7 @@
 		<div class="row ">
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-default">
-					<div class="row color1">
+					<div class="row">
 				    	<div class="col-md-4">
 				   			<div class="panel-heading">
 				      			<h4 class="panel-title"><b>Nombre</b></h4>
