Eliminar, listar miembros, modificar y buscar proyectos realizado

--- a/sap/templates/proyectos/modificarproyecto.html
+++ b/sap/templates/proyectos/modificarproyecto.html
@@ -4,7 +4,7 @@
 <div class="menu">
 	<ul>
 		<li id="option1" class="active">
-			<a href="#">Modificar Proyecto</a>
+			<a href="#">Modificar {{ proyecto.nombre }}</a>
 		</li>
 	</ul>
 </div>
