--- a/sap/templates/inicio.html
+++ b/sap/templates/inicio.html
@@ -90,10 +90,10 @@
 				    
 				    <div id="collapse{{ proyecto.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<a href="adm_proyectos/consultar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="adm_proyectos/modificar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<a href="consultar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/{{ proyecto.id }}/"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
 				      		<button class="btn btn-danger btn-sm proyectos" data-toggle="modal" data-target="#myModal" data-id="{{ proyecto.id }}">Eliminar</button>
-				      		<a href="adm_proyectos/gestionar/{{ proyecto.id }}/"><button type="button" class="btn btn-primary btn-sm">Gestionar Proyecto</button></a>
+				      		<a href="gestionar/{{ proyecto.id }}/"><button type="button" class="btn btn-primary btn-sm">Gestionar Proyecto</button></a>
 				      </div>
 				    </div>
 				</div>
