--- a/sap/templates/proyectos/consultarproyecto.html
+++ b/sap/templates/proyectos/consultarproyecto.html
@@ -48,6 +48,7 @@
 						</tbody>	
 					</table>
 					
+					{% if fases %}
 					<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
 							<tr class="active">
@@ -57,9 +58,18 @@
 						  		<td><p><h4>Nombre de Fase</h4></p></td>
 						  		<td><p><h4>Estado</h4></p></td>
 						  	</tr>
-						  	<!-- aca va el bloque de iteracion de fases -->
+						  	
+						  	{% for fase in fases %}
+								<tr class="active">
+									<td><p><h4>{{ fase.nombre }}</h4></p></td>
+									<td><p><h4>{{ fase.estado }}</h4></p></td>
+								</tr>
+							{% endfor %}
 						<tbody>
 					</table>
+					{% else %}
+						<p><h2><span class="label label-default">El proyecto aun no cuenta con fases</span></h2></h4></p>
+					{% endif %}
 					<div align="center">
 						<a href="/"><button type="button" class="btn btn-default">Volver</button></a>
 					</div>
