--- a/sap/templates/proyectos/listarmiembrosproyecto.html
+++ b/sap/templates/proyectos/listarmiembrosproyecto.html
@@ -17,12 +17,10 @@
 				</div>
 				
 				<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-					
+					{% if miembros %}
+					<p><h2><span class="label label-default">Lista de miembros de {{ proyecto.nombre }}</span></h2></h4></p>
 					<table class="table table-hover table-bordered table-condensed table-responsive">
 						<tbody>
-							<tr class="active">
-						  		<p><h2><span class="label label-default">Lista de miembros de {{ proyecto.nombre }}</span></h2></h4></p>
-						  	</tr>
 						  	<tr class="active">
 						  		<td><p><h4>ID</h4></p></td>
 						  		<td><p><h4>Nombre y Apellido</h4></p></td>
@@ -37,6 +35,9 @@
 							{% endfor %}
 						<tbody>
 					</table>
+					{% else %}
+						<p><h2><span class="label label-default">El proyecto aun no cuenta con Miembros</span></h2></h4></p>
+					{% endif %}
 					<div align="center">
 						<a href="/"><button type="button" class="btn btn-default">Volver</button></a>
 					</div>
