--- a/sap/templates/proyectos/listarmiembrosproyecto.html
+++ b/sap/templates/proyectos/listarmiembrosproyecto.html
@@ -23,12 +23,14 @@
 						<tbody>
 						  	<tr class="active">
 						  		<td><p><h4>ID</h4></p></td>
+						  		<td><p><h4>Nombre de Usuario</h4></p></td>
 						  		<td><p><h4>Nombre y Apellido</h4></p></td>
 						  		<td><p><h4>Rol</h4></p></td>
 						  	</tr>
 						  	{% for miembro in miembros %}
 								<tr class="active">
 									<td><p><h4>{{ miembro.user_id }}</h4></p></td>
+									<td><p><h4>{{ miembro }}</h4></p></td>
 									<td><p><h4>{{ miembro.user.first_name }} {{ miembro.user.last_name }}</h4></p></td>
 									<td><p><h4>Rol</h4></p></td>
 								</tr>
@@ -48,8 +50,6 @@
 		</div>
 	</div>
 </div>
-
-	
 {% endblock %}
 
 
