--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -107,7 +107,9 @@
 		</div>
 		{% else %}
 			{% if error %}
-				<font color="red"><h3><p align="center"><b>No se encontraron coincidencias.</b></p></h3></font>
+				<div class="jumbotron">
+  					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias.</b></p></h3></div>
+				</div>
 			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
