--- a/sap/templates/proyectos/proyectoalerta.html
+++ b/sap/templates/proyectos/proyectoalerta.html
@@ -1,11 +1,10 @@
 {% extends "base_general.html" %}
 {% block contenido %}
 <div class="jumbotron">
-	<div class="bs-example">
+	<div class="bs-example" align="center">
 		<h2>Notificacion</h2>
 			<p class="text-warning"><small>{{ mensaje }}</small></p>
 			<a type="button" class="btn btn-default" href="/">Volver</a>
-        </form>
 	</div>
 </div>
 {% endblock %}
