--- a/sap/templates/autenticacion/autenticacion.html
+++ b/sap/templates/autenticacion/autenticacion.html
@@ -2,18 +2,16 @@
 {% block titulo %}Registro de Usuario{% endblock %}
 
 {% block contenido %}
-	<h1 align="center">Registro de Usuario</h1>
+	<div class="page-header">
+  		<h1 align="center">Registro de Usuario</h1>
+	</div>
 	{% if mensaje %}
-		<div class="jumbotron">
-			<div class="bs-example">
-				<p class="text-warning" align="center"><small>{{ mensaje }}</small></p>
-			</div>
-		</div>
+  			<div class="alert alert-danger"><h3><p align="center"><b>{{ mensaje }}</b></p></h3></div>
 	{% endif %}
 	<div class="jumbotron boxlogin">
 		<form method="POST" name="flogin" id="flogin">{% csrf_token %}
 			{{ form.as_p }}
-			<input type="submit" class="btn btn-success" value="Ingresar">
+			<button class="btn btn-lg btn-success btn-block" type="submit">Ingresar</button>
 		</form>
 	</div> 
 {% endblock %}
