--- a/sap/templates/index.html
+++ b/sap/templates/index.html
@@ -108,8 +108,11 @@
 		{% else %}
 			{% if error %}
 				<div class="jumbotron">
-  					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias.</b></p></h3></div>
+  					<div class="alert alert-danger"><h3><p align="center"><b>No se encontraron coincidencias</b></p></h3></div>
 				</div>
+				<div  align="center">
+					<a type="button" class="btn btn-default" href="/">Volver</a>
+				</div>	
 			{% else %}
 				<div class="jumbotron">
 					<div class="bs-example">
