--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -68,7 +68,7 @@
 				      <div class="panel-body">
 				      		<a href="#"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
 				      		<a href="#"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="btn btn-danger btn-sm proyectos" data-toggle="modal" data-target="#myModal" data-id="{{ proyecto.id }}">Eliminar</button>
+				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}">Eliminar</button>
 				      		<a href="#"><button type="button" class="btn btn-primary btn-sm">Gestionar Fase</button></a>
 				      </div>
 				    </div>
@@ -98,7 +98,7 @@
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-		       <a id="proyecto" href=""><button type="button" class="btn btn-danger">Estoy Seguro</button></a>
+		       <a id="fase" href=""><button type="button" class="btn btn-danger">Estoy Seguro</button></a>
 		      </div>
 		    </div>
 		  </div>
