--- a/sap/templates/proyectos/importarproyecto.html
+++ b/sap/templates/proyectos/importarproyecto.html
@@ -15,6 +15,7 @@
 <div class="content-secondary">
 <!-- Aca van la  lista de Proyectos.. o de Solicitudes.. o de credenciales -->
 		{% if lista_proyectos %}
+  		<div class="alert alert-info"><h2><p align="center"><b>Seleccione el proyecto que desea importar</p></h2></div>
 		<div class="row ">
 			<div class="panel-group" id="accordion">
 				<div class="panel panel-default">
