--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -66,9 +66,9 @@
 				    
 				    <div id="collapse{{ fase.id }}" class="panel-collapse collapse pull-left">
 				      <div class="panel-body">
-				      		<a href="#"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
-				      		<a href="#"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
-				      		<button class="btn btn-danger btn-sm proyectos" data-toggle="modal" data-target="#myModal" data-id="{{ proyecto.id }}">Eliminar</button>
+				      		<a href="consultar/{{ fase.id }}/"><button type="button" class="btn btn-default btn-sm">Consultar</button></a>
+				      		<a href="modificar/{{ fase.id }}"><button type="button" class="btn btn-default btn-sm">Modificar</button></a>
+				      		<button class="btn btn-danger btn-sm fases" data-toggle="modal" data-target="#myModal" data-id="{{ fase.id }}">Eliminar</button>
 				      		<a href="#"><button type="button" class="btn btn-primary btn-sm">Gestionar Fase</button></a>
 				      </div>
 				    </div>
@@ -85,24 +85,24 @@
 			</div>
 		{% endif %}
 		
-		<!-- Ininicia Modal -->
-		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		  <div class="modal-dialog">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		        <h4 class="modal-title" id="myModalLabel">Eliminar</h4>
-		      </div>
-		      <div class="modal-body">
-		        	Esta usted seguro de que desea eliminar la fase?
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-		       <a id="proyecto" href=""><button type="button" class="btn btn-danger">Estoy Seguro</button></a>
-		      </div>
-		    </div>
-		  </div>
-		</div>
-		<!-- Finaliza el Modal -->
+			<!-- Ininicia Modal -->
+			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h4 class="modal-title" id="myModalLabel">Eliminar</h4>
+						</div>
+						<div class="modal-body">
+							Esta usted seguro de que desea eliminar el proyecto?
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+							<a id="fase" href=""><button type="button" class="btn btn-danger">Estoy Seguro</button></a>
+						</div>
+					</div>
+				</div>
+			</div>
+<!-- Finaliza el Modal -->
 </div>
 {% endblock %}
