Nuevo: importar fase

--- a/sap/templates/Fases/fasenueva.html
+++ b/sap/templates/Fases/fasenueva.html
@@ -24,7 +24,7 @@
 		{% csrf_token %}
 	<div align="center"><br>
 		<input class="btn btn-default" type="submit" value="Crear"/>
-		<a href="gestionar/"><button type="button" class="btn btn-default">Cancelar</button></a>
+		<a href="/adm_proyectos/gestionar/{{ id_proyecto }}/"><button type="button" class="btn btn-default">Cancelar</button></a>
 	</div>
 	<br>
 	</form>
