--- a/sap/templates/Fases/fases.html
+++ b/sap/templates/Fases/fases.html
@@ -14,7 +14,7 @@
 <div class="row">
 	<form class="navbar-form navbar-left">
 		<a href="nuevo/"><button type="button" class="btn btn-default">Crear Fase</button></a>
-		<button type="submit" class="btn btn-default">Importar Fase</button>
+		<a href="importar_fase/"><button type="button" class="btn btn-default">Importar Fase</button></a>
 		<form action="" method="get">
 				<input type="text" name="busqueda" class="btn btn-default">
 				<input class="btn btn-default" type="submit" value="Buscar">
