Cambio de la forma de seleccion de miembros y cambio de formato de tiempo y lenguaje en el settings

--- a/sap/templates/base_general.html
+++ b/sap/templates/base_general.html
@@ -20,6 +20,8 @@
 		<script type="text/javascript" src="{{ STATIC_URL }}admin/js/calendar.js"></script>
 		<script type="text/javascript" src="{{ STATIC_URL }}admin/js/admin/DateTimeShortcuts.js"></script>
 		<script type="text/javascript">window.__admin_media_prefix__ = "/static/admin/";</script>
+		<script type="text/javascript" src="{{ STATIC_URL }}admin/js/SelectBox.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}admin/js/SelectFilter2.js"></script>
 
 	</head>
 	<!-- Fin de la cabecera -->
